--- a/BlindBoxShop.Application/_Imports.razor
+++ b/BlindBoxShop.Application/_Imports.razor
@@ -7,6 +7,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using Microsoft.AspNetCore.WebUtilities
 @using BlindBoxShop.Application
 @using BlindBoxShop.Application.Components
 @using BlindBoxShop.Application.Components.Layout
